--- a/student-testing-springboot/src/main/resources/messages.properties
+++ b/student-testing-springboot/src/main/resources/messages.properties
@@ -6,3 +6,6 @@ incorrect=Incorrect
 enter=Enter 
 first.name=first name
 last.name=last name
+number.correct.answers=Number correct answers: 
+pass=, your grade: pass
+fail=, your grade: fail
