--- a/student-testing-springboot/src/main/resources/messages_ru_RU.properties
+++ b/student-testing-springboot/src/main/resources/messages_ru_RU.properties
@@ -6,3 +6,6 @@ incorrect=Неправильно
 enter=Введите 
 first.name=имя
 last.name=фамилию
+number.correct.answers=Количество правильных ответов: 
+pass=, ваша оценка: зачёт
+fail=, ваша оценка: незачёт
